2010-08-31
- implemented GraphcisItemRelayInterface using multiple inheritance to reduce duplicated code
    QList<GraphicsItemRelay*> relays;
    void addRelay(GraphicsItemRelay* r);
    void delRelay(GraphicsItemRelay* r);
  are now found in GraphcisItemRelayInterface

2010-08-30
 - Connection(s) to modputs are now drawn correctly, fixed a simple assignment but in Connection::Connection(..)

2010-08-29
this relase fixes one of my worst problems in frontend item handling
 - created a easy to use interface to pass position changes from Ports to Connections
  - a Connection does not hold a pointer to a Port
  - a Port does not hold a pointer to a Connection
  -> see class GraphicsItemRelay
  -> also see the whole discussion: 'why QGraphicsItem(s) do need direct access to each other sometimes'
  - when a module is inserted after a connection is inserted, then the relays are inserted now
  -> this framework still needs some love (see TODO) and testing
 - added Model::references(..) function to query a list of QModelIndexes (connections) for a certain Port
 - found a use-case where a certain bug is always triggered, see top item in TODO

2010-08-27
 - not much code in this commit but TODO has a lot of interesting concepts waiting to be implemented

2010-08-24
 - QTreeView is now expanded when loading modules via Document.cpp
 - CTRL+A selects all QGraphicsItems in the scene now
 - fixed a BUG where the program crashed if a new connection was drawn from a Port to nowhere, see GraphicsScene::mouseReleaseEvent(..)
 - class ObjectPool extends the GraphicsScene to give View objects as 'Connection', 'Module' or 'Port' access to translate
   QGraphicsItems into QPersistentModelIndex'es and vice versa without having to use the 'scene' pointer as done before
 - reduced code in GraphicsScene as this 3 functions were moved to class ObjectPool:
  - QGraphicsItem* model2GraphicsItem( QPersistentModelIndex index );