@@ -1,13 +1,3 @@
-- regression: selection of connections does not work well?
- -> works when the port is clicked (which is not selectable)??!! don't know, maybe because of my current changes....
-
-what is the conceptional difference between:
- - [1] qgraphicslineitem
- - [2] qgraphicspathitem
- -> [1] can receive mousePressEvents out of the box while [2] can not?!
-
-
-
 - fix all FIXME lines in all frontend classes
  - connection
  - port
