@@ -6,7 +6,6 @@
 #include "GraphicsItemModelExtension.h"
 #include "GraphicsItemRelayInterface.h"
 
-class QGraphicsLineItem;
 class QRectF;
 class QPainterPath;
 
@@ -30,10 +29,6 @@ public:
     void updatePosition();
 protected:
     void paint(QPainter *painter, const QStyleOptionGraphicsItem *option, QWidget *widget = 0);
-//     bool contains( const QPointF & point ) const;
-    void mousePressEvent ( QGraphicsSceneMouseEvent * event );
-    void mouseDoubleClickEvent ( QGraphicsSceneMouseEvent * event );
-    void mouseReleaseEvent(QGraphicsSceneMouseEvent *event);
 
 private:
     QPainterPath connectionPath() const;
