@@ -1,3 +1,8 @@
+2010-09-01
+ - fixed: selection of Connections now works as expected. the problem was that 
+   void GraphicsScene::mousePressEvent ( QGraphicsSceneMouseEvent *mouseEvent ) {
+   had a return; statement which in some cases did not forward the mousePressEvent to the respecitve item
+
 2010-08-31
 - implemented GraphcisItemRelayInterface using multiple inheritance to reduce duplicated code
     QList<GraphicsItemRelay*> relays;
